--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "genesys-dev-icons",
-	"version": "0.1.12",
+	"version": "0.1.13",
 	"private": false,
 	"description": "This project amalgamates public-facing Genesys brand icons, Genesys product icons, and general application iconography into a packaged icon library.",
 	"homepage": "https://purecloudlabs.github.io/genesys-dev-icon-pack",
@@ -18,7 +18,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Genesys",
-	"license": "SEE LICENSE IN https://github.com/purecloudlabs/genesys-dev-icon-pack/blob/main/LICENSE",
+	"license": "https://github.com/purecloudlabs/genesys-dev-icon-pack/blob/main/LICENSE",
 	"devDependencies": {
 		"@types/react": "^17.0.29",
 		"@types/react-dom": "^17.0.9",
