--- a/package/package.json
+++ b/package/package.json
@@ -13,9 +13,10 @@
 	"types": "lib/index.d.ts",
 	"scripts": {
 		"prepare": "yarn build",
-		"build": "rm -rf ./lib && tsc && npm run copy-resources",
+		"build": "cd .. && sh ./build.sh",
+		"buildpackage": "rm -rf ./lib && tsc && npm run copy-resources",
 		"copy-resources": "cp src/resources/genesys-dev-icons.css lib/resources/ && cp src/resources/genesys-dev-icons.eot lib/resources/ && cp src/resources/genesys-dev-icons.woff lib/resources/ && cp src/resources/genesys-dev-icons.woff2 lib/resources/",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"0/0 tests passed. That's technically a perfect score. Keep up the great work!\""
 	},
 	"author": "Genesys",
 	"license": "https://github.com/purecloudlabs/genesys-dev-icon-pack/blob/main/LICENSE",
@@ -27,8 +28,8 @@
 		"typescript": "^4.4.4"
 	},
 	"peerDependencies": {
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": ">=16",
+		"react-dom": ">=16"
 	},
 	"files": [
 		"lib"
