--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"genesys-dev-icons": "^0.1.16-devengage-1107-yeast.43",
+		"genesys-dev-icons": "^0.1.28-devengage-1198-editor-icons.95",
 		"node-sass": "^6.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
