--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "genesys-dev-icons",
-	"version": "0.1.31",
+	"version": "0.2.0",
 	"private": false,
 	"description": "This project amalgamates public-facing Genesys brand icons, Genesys product icons, and general application iconography into a packaged icon library.",
 	"homepage": "https://purecloudlabs.github.io/genesys-dev-icon-pack",
@@ -9,8 +9,11 @@
 		"url": "https://github.com/purecloudlabs/genesys-dev-icon-pack.git",
 		"directory": "package"
 	},
-	"main": "src/index.ts",
-	"type": "module",
+	"types": "lib/index.d.ts",
+	"exports": {
+		"require": "./src/index.ts",
+		"default": "./lib/index.js"
+	},
 	"scripts": {
 		"prepare": "yarn build",
 		"build": "cd .. && sh ./build.sh",
